Fixed logic behind particle board.

--- a/client/src/styles/ParticleBoardSection.scss
+++ b/client/src/styles/ParticleBoardSection.scss
@@ -116,8 +116,8 @@
 
     .loading-container {
         position: absolute;
-        top: 16%;
-        transform: translateY(-16%);
+        top: 20%;
+        transform: translateY(-20%);
         left: 50%;
         transform: translatex(-50%);
         height: 100%;
